ingress-for-gke/container-native-loadbalancing/service-neg.yml
apiVersion: v1
kind: Service
metadata:
  name: neg-svc
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    run: neg-app
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9376
