ingress-for-gke/container-native-loadbalancing/ingress-neg.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: neg-ing
spec:
  backend:
    serviceName: neg-svc
    servicePort: 80
